Bug 1958859 - Added text-color transition to addon cards to fix flickering. r=desktop-theme-reviewers,willdurand,hjones
Differential Revision: https://phabricator.services.mozilla.com/D244612

UltraBlame original commit: a4625bcaba2df8bdf484842cd0a2255fb60f2626

--- a/toolkit/mozapps/extensions/content/aboutaddons.css
+++ b/toolkit/mozapps/extensions/content/aboutaddons.css
@@ -1495,6 +1495,23 @@ bottom
 :
 16px
 ;
+overflow
+:
+hidden
+;
+media
+(
+prefers
+-
+reduced
+-
+motion
+:
+no
+-
+preference
+)
+{
 transition
 :
 opacity
@@ -1504,10 +1521,21 @@ box
 shadow
 150ms
 ;
-overflow
+&
+.
+addon
+-
+name
+-
+link
+{
+transition
 :
-hidden
+color
+150ms
 ;
+}
+}
 }
 addon
 -
