--- a/toolkit/themes/shared/in-content/common-shared.css
+++ b/toolkit/themes/shared/in-content/common-shared.css
@@ -10019,6 +10019,19 @@ padding
 1px
 )
 ;
+media
+(
+prefers
+-
+reduced
+-
+motion
+:
+no
+-
+preference
+)
+{
 transition
 :
 box
@@ -10026,6 +10039,7 @@ box
 shadow
 150ms
 ;
+}
 }
 .
 card
